--- a/packages/snake/index.html
+++ b/packages/snake/index.html
@@ -12,7 +12,7 @@
   <body>
     <h1>Here's a canvas?</h1>
     <div style="display: flex">
-    <canvas id=canvas width=100 height=100 style="outline: 1px solid blue; margin: auto; width: 80%; aspect-ratio: 1/1; max-width: 600px; "></canvas>
+    <canvas id=canvas width=600 height=600 style="outline: 1px solid blue; margin: auto; width: 100%; aspect-ratio: 1/1"></canvas>
     </div>
     <script type="module">
 
