--- a/packages/snake/index.html
+++ b/packages/snake/index.html
@@ -17,7 +17,7 @@
     <script type="module">
 
       import { main } from './src/main'
-      void main()
+      void main('canvas')
 
     </script>
   </body>
